option java_package = "org.SouthMillion.proto.msgmail";

import "cs/msgknapsack.proto";

message PB_MailAckInfo {//!< 邮件操作返回
	optional int32	mail_type = 1;		//!< 邮件类型
	optional int32	mail_index = 2;		//!< 邮件位置
	optional int32	ret = 3;			//!< 0是成功 其他失败 
}

//!<MsgId:9501
message PB_SCMailDeleteAck {//!< 删除邮件返回
	repeated PB_MailAckInfo	ask_info = 1;
}

message PB_MailBriefData {//!<邮件摘要信息
	optional int32	mail_type = 1;		//!< 邮件类型
	optional int32	mail_index = 2;	    //!< 邮件位置

	optional uint32	recv_time = 3;		//!< 收到邮件的时间
	optional int32 is_read = 4;			//!< 已读
	optional int32 is_fetch = 5;		//!< 已领

	optional bytes subject = 6;		//!< 邮件标题

	repeated PB_ItemData item_data = 7;	//!< 第一个附件物品信息
}

//!<MsgId:9504
message PB_SCMailListAck {//!< 下发邮件摘要列表 (全部/新增)
	repeated PB_MailBriefData mail_brief_data = 1;	//!< 邮件信息列表
}

//!<MsgId:9505
message PB_SCMailDetail {//!< 邮件内容
	optional int32	mail_type = 1;		//!< 邮件类型
	optional int32	mail_index = 2;	    //!< 邮件位置

	optional bytes subject = 3;		//!< 邮件标题
	optional bytes contenttxt = 4;		//!< 文本内容

	repeated PB_ItemData item_data = 5;	//!< 附件物品列表
}

//!<MsgId:9506
message PB_SCFetchMailAck {//!< 领取邮件返回
	repeated PB_MailAckInfo	ask_info = 1;
}

//!<MsgId:9551
message PB_CSMailReq {//!< 角色操作
	optional int32	type = 1;			//!< 操作类型
	optional int32	p_1 = 2;			//!< 参数
	optional int32	p_2 = 3;			//!< 参数
}
